# Pipeliner

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  alembic.ini  pyproject.toml
.pipeliner-manual-test/: pipeliner.db
.pipeliner-real-claude-test/: pipeliner.db  run_inputs.json
.pipeliner-timeout-test/: pipeliner.db
alembic/: env.py
alembic/versions/: 0001_initial_mvp.py  0b2e7d5a8c21_add_batch_runs.py  4a7d8c1b2f3e_add_authoring_source_and_generation_logs.py  7c3b4d5e6f70_merge_batch_runs_and_authoring_heads.py  9f4c6f1d2d11_expand_authoring_studio_models.py  c6e2c87f35cd_add_authoring_session_and_draft_models.py
docs/: artifact-manifest-design.md  development-plan.md  node-callback-payload-design.md  pipeliner-agent-orchestrator-design.md  runtime-guards-design.md  studio-usage.md  tech-stack-decision.md  workflow-spec-design.md
projects/authoring-draft/: workflow.json
projects/authoring-generate/: workflow.json
projects/authoring_generate/: workflow.json
projects/broken-draft/: workflow.json
scripts/: dev-up.sh
temp/: batch-run-progress-20260315.txt  design-review-feedback.md
tests/: conftest.py  test_artifact_registry.py  test_callback_api.py  test_classical_text_workflow.py  test_claude_call_stream.py  test_claude_env.py  test_claude_executor_dispatch.py  test_claude_validator_dispatch.py  test_db_sqlite.py  test_e2e_mvp.py  test_protocols.py  test_run_driver.py  test_runtime.py  test_runtime_cwd.py  test_skill_naming.py  test_skill_packages.py
web/: README.md  next.config.ts  package-lock.json  package.json  vitest.config.ts
(+407 files in other folders)
